--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
-    "next": "14.2.6",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^14.2.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "sweetalert2": "^11.15.3"
   },
   "devDependencies": {
     "@types/node": "^20",
