--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Kalkulator Wynagrodzeń",
-  "short_name": "Kal-Wyn",
+  "short_name": "Kal - Wyn",
   "icons": [
     {
       "src": "/web-app-manifest-192x192.png",
@@ -16,6 +16,6 @@
     }
   ],
   "theme_color": "#ffffff",
-  "background_color": "#ffffff",
+  "background_color": "#0fe84e",
   "display": "standalone"
 }
