--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "ioredis": "^5.4.2",
     "next": "^14.2.6",
     "react": "^18.3.1",
     "react-cookie-consent": "^9.0.0",
