--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "export": "next export"
   },
   "dependencies": {
+    "cookie": "^1.0.2",
     "ioredis": "^5.4.2",
     "next": "^14.2.6",
     "react": "^18.3.1",
     "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.3.1",
+    "redis": "^4.7.0",
     "sweetalert2": "^11.15.10"
   },
   "devDependencies": {
